Revision history for Perl extension DBIx::Skinny

0.0739
   2011-02-10
        - FIXED : update inflated row twice bug.(thanks nihen)
        - FIXED : avoid duplicate update field.(thanks nihen)

0.0738
   2011-02-09
        - FIXED : avoid an unexpected deatbh by (hackish-ly) setting InactiveDestroy on the child DB handle(thanks nihen, lestrrat)

0.0737
   2011-02-09
        - FIXED: CRITICAL transaction bug fixed. All users using version 0.0733 to 0.0736 are recommended to upgrade to this version.

0.0736
   2011-02-09
        - FIXED : fixed search_named document.(thanks Joshua)
        - FIXED : transaction bug by reconnect database.

0.0735
   2011-02-07
        - FIXED : check if $pk is defined before doing anything with it.(thanks lestrrat)
        - FIXED : double check that we hae the row_class properly initialized.(thanks lestrrat)

0.0734
   2011-02-07
        - FIXED : Behavior when definition doesn't table exist.(thanks nihen)
        - FIXED : Priority of operator's bug. (thanks tokuhirom)

0.0733
   2011-02-06
        - many code refactoring.
        - ADD : Skinny::Util
        - ADD : set row class at install_table.
        - MOD : Create better diagnostics for transactions guards that were not
                properly dismissed
        - MOD : Depend on DBIx::TransactionManager 1.06

0.0732
   2010-12-22
        - FIXED : deflate bug. (thanks azumakuniyuki)
        - MOD   : check prepare method. (thanks tokuhirom)
        - MOD   : refactoring insert code. (thanks tokuhirom)

0.0731
   2010-12-15
        - FIXED : where condition bug fixed. (thanks tokuhirom)

0.0730
   2010-12-14
        - MOD : add load_class method.
        - ADD : add_where_raw method for Skinny::SQL (thanks nihen)
        - MOD : Iterator's no_cache method has been deprecated. use cache method instead.
        - ADD : add find_or_create's knowun bug notice message.
        - ADD : refetch method for DBIx::Skinny::Row.