@@ -4,6 +4,7 @@ Revision history for Perl extension DBIx::Skinny
    2011-02-10
         - FIXED : update inflated row twice bug.(thanks nihen)
         - FIXED : avoid duplicate update field.(thanks nihen)
+        - MOD   : Change transaction error messages to contain line number of the currently effective transaction.(thanks lestrrat)
 
 0.0738
    2011-02-09
